fix: spをpcで非表示

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -43,6 +43,7 @@ css:
   }
 
   .sp-header-list {
+    display: none;
     opacity: .8;
   }
 
@@ -56,5 +57,9 @@ css:
 
     .pc-header-list {
       display: none;
+    }
+
+    .sp-header-list {
+      display: block;
     }
   }
