feat: スライドショー擬き

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -238,7 +238,7 @@ input[type="button"] {
 
 // HOME TOP(ROOT PATH)
 .bg-top {
-  background-image: url(books.jpg);
+  // background-image: url(books.jpg);
   opacity: .9;
   background-position: center center;
   background-size: cover;
