--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -111,6 +111,7 @@ css:
     width: 740px;
     height: 390px;
     transition: .3s;
+    padding-right: 3%;
   }
 
   .top-slide-contents img:hover {
@@ -118,11 +119,12 @@ css:
     transition: .3s;
   }
 
-  .top-slide-contents:last-child {
+  .top-slide-contents img:first-child {
+    
   }
 
-  .top-slide-contents img {
-    padding-right: 3%;
+  .top-slide-contents img:last-child {
+    order: -1;
   }
 
   /* NOTE: 旧トップ */
@@ -384,6 +386,20 @@ css:
   }
 
   @media screen and (max-width: 480px) {
+      .top-container {
+      margin-left: 4%;
+      margin-right: 4%;
+    }
+
+    .top-slide-contents {
+      padding-top: 10%;
+    }
+
+    .top-slide-contents img {
+      height: 190px;
+      padding-right: 4.5%;
+    }
+
     .top-newuser-action {
       margin: 12% 4%;
     }
