--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,6 +7,8 @@ html
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application'
+    = stylesheet_link_tag "https://unpkg.com/swiper/swiper-bundle.css"
+    = javascript_include_tag "https://unpkg.com/swiper/swiper-bundle.min.css"
     meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     link href="https://fonts.googleapis.com/css?family=Sawarabi+Gothic" rel="stylesheet"
     link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"
