--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -99,6 +99,7 @@ section.top-container
           p.top-post-link = link_to "詳細をみる", post
 
 javascript:
+  // スライドショー
   document.addEventListener('DOMContentLoaded', () => {
     const swiper = new Swiper('.swiper-container', {
       loop: true,
