--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -100,16 +100,16 @@ section.top-container
 
 javascript:
   // スライドショー
-  document.addEventListener('DOMContentLoaded', () => {
-    const swiper = new Swiper('.swiper-container', {
-      loop: true,
-      speed: 700,
-      autoplay: {
-        delay: 4000,
-        disableOnInteraction: false,
-      },
-      centeredSlides: true,
-
+  //document.addEventListener('DOMContentLoaded', () => {
+  //  const swiper = new Swiper('.swiper-container', {
+  //    loop: true,
+  //    speed: 700,
+  //    autoplay: {
+  //      delay: 4000,
+  //      disableOnInteraction: false,
+  //    },
+  //    centeredSlides: true,
+//
       // If we need pagination
       pagination: {
         el: '.swiper-pagination',
