--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,6 +1,6 @@
 header
   .header-logo
-    h1 = link_to "リライア", root_path
+    h1 = link_to image_tag("relier_logo.JPG"), root_path
   .pc-header-list
     ul
       - if user_signed_in?
@@ -26,9 +26,14 @@ css:
     margin-bottom: 1.3%;
   }
 
-  .header-logo h1 {
-    font-size: 1.75rem;
-    font-family: "Sawarabi Mincho";
+  .header-logo h1 a img {
+    margin-top: 1.5%;
+    width: 135px;
+    height: 60px;
+  }
+
+  .header-logo h1 a img:hover {
+    opacity: .7;
   }
 
   .pc-header-list ul {
